...
                                <connections>
                                    <outlet property="delegate" destination="d8X-GG-psw" id="7e0-Uo-K7c"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lLd-3Q-LxQ" userLabel="Back">
                                <rect key="frame" x="8" y="68" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="VgZ-PH-yg0"/>
                                    <constraint firstAttribute="width" constant="24" id="pFL-cH-KWB"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="Backward"/>
...
                                    <constraint firstAttribute="width" constant="60" id="yQx-zE-Zve"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AbE-Yb-7YX">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="aCh-Mb-ZCc"/>
                                </constraints>
                                <color key="tintColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="IzK-w1-aDC" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="qfy-LQ-JUm">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="9Fl-Qk-ohx">
                                <rect key="frame" x="0.0" y="172" width="393" height="680"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
