//
//  ImageFeedUITests.swift
//  ImageFeedUITests
//

import XCTest

class Image_FeedUITests: XCTestCase {
    private let app = XCUIApplication()
    
    override func setUpWithError() throws {
        continueAfterFailure = false
        let app = XCUIApplication()
        app.launchArguments = ["testMode"]
        app.launch() 
    }
    
    func testAuth() throws {

        let button = app.buttons["Authenticate"]
        XCTAssertTrue(button.waitForExistence(timeout: 5))
        button.tap()
        
        let webView = app.webViews["UnsplashWebView"]
        XCTAssertTrue(webView.waitForExistence(timeout: 30))
        
        webView.swipeUp()
        
        let loginTextField = webView.descendants(matching: .textField).element
        XCTAssertTrue(loginTextField.waitForExistence(timeout: 30))
        
        loginTextField.tap()
        sleep(2)
        loginTextField.typeText("")
   
        if app.toolbars.buttons["Done"].exists {
            app.toolbars.buttons["Done"].tap()
            sleep(1)
        }
        sleep(1)

        let passwordTextField = webView.descendants(matching: .secureTextField).element
        XCTAssertTrue(passwordTextField.waitForExistence(timeout: 5))
        
        passwordTextField.tap()
        sleep(2)
        passwordTextField.typeText("")
        
        sleep(2)
        
        let keyboards = app.keyboards.buttons["Done"]
        if keyboards.exists {
            keyboards.tap()
        }
        
        webView.buttons["Login"].tap()
        
        let tablesQuery = app.tables
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        
        XCTAssertTrue(cell.waitForExistence(timeout: 30))
    }
    
    func testFeed() throws {
        
        let tablesQuery = app.tables
         
         let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
         cell.swipeUp()
         
         sleep(2)
         
         let cellToLike = tablesQuery.children(matching: .cell).element(boundBy: 1)
         
         cellToLike.buttons["like button off"].tap()
         sleep(5)
         cellToLike.buttons["like button on"].tap()
         
         sleep(2)
         
         cellToLike.tap()
         
         sleep(2)
         
         let image = app.scrollViews.images.element(boundBy: 0)
         // Zoom in
         image.pinch(withScale: 3, velocity: 1) // zoom in
         // Zoom out
         image.pinch(withScale: 0.5, velocity: -1)
         
         let navBackButtonWhiteButton = app.buttons["backButton"]
         navBackButtonWhiteButton.tap()
    }
    
    func testProfile() throws {
        sleep(3)
        app.tabBars.buttons.element(boundBy: 1).tap()
       
        XCTAssertTrue(app.staticTexts["Anna Lapukhina"].exists)
        XCTAssertTrue(app.staticTexts["@beyondobjectivity7"].exists)
        
        app.buttons["logout button"].tap()
        
        app.alerts["Пока, пока!"].scrollViews.otherElements.buttons["Да"].tap()
    }
}
